; ModuleID = '/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_get_max_read.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_get_max_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @evbuffer_get_max_read(%struct.evbuffer* %0) #0 {
  %2 = alloca %struct.evbuffer*, align 8
  %3 = alloca i64, align 8
  store %struct.evbuffer* %0, %struct.evbuffer** %2, align 8
  %4 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %5 = call i32 @EVBUFFER_LOCK(%struct.evbuffer* %4)
  %6 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %7 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %3, align 8
  %9 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %10 = call i32 @EVBUFFER_UNLOCK(%struct.evbuffer* %9)
  %11 = load i64, i64* %3, align 8
  ret i64 %11
}

declare dso_local i32 @EVBUFFER_LOCK(%struct.evbuffer*) #1

declare dso_local i32 @EVBUFFER_UNLOCK(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
